# pulp

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.json  benchmark_report.md  cli.py  coverage.xml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: benchmark.yml  ci.yml
scripts/: benchmark.py  make_fixtures.py
src/pulp/: __init__.py  clean.py  cli.py  config.py  detect.py  extract.py  models.py  render.py  structure.py
src/pulp/prompts/: heading_v1.txt  structure_v1.txt
tests/: conftest.py
tests/fixtures/expected/: boilerplate_doc.md  footnote_doc.md  hyphenated_doc.md  memo.md  multipage_report.md  numbered_list.md  resume.md  simple_noise.md  technical_report.md  two_column.md
tests/integration/: test_pipeline.py
tests/unit/: test_clean.py  test_cli_diff.py  test_detect.py  test_extract.py  test_render.py  test_structure.py
