[project]
name = "pulp"
version = "0.1.0"
description = "Local-first PDF-to-Markdown conversion pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic",
  "camelot-py",
  "loguru",
  "pdf2image",
  "pdfplumber",
  "pillow",
  "pydantic>=2",
  "pydantic-settings",
  "pytesseract",
  "tiktoken",
  "typer",
]

[project.scripts]
pulp = "pulp.cli:app"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-snapshot",
  "ruff",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
